[gd_scene load_steps=4 format=3 uid="uid://dtojyds3v1vsw"]

[ext_resource type="Script" path="res://Game/script/GUI/game_GUI.gd" id="1_syva1"]
[ext_resource type="Texture2D" uid="uid://bku4oa8y66m87" path="res://Ressources/sprite/vaisseau/border.png" id="2_ssaku"]
[ext_resource type="Texture2D" uid="uid://jo48rghm3dtb" path="res://Ressources/sprite/vaisseau/heart.png" id="3_t8bnp"]

[node name="GUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_syva1")

[node name="power_energy" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_horizontal = 8
max_value = 10.0
step = 1.0
value = 10.0
fill_mode = 3

[node name="top_left" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="score" type="HBoxContainer" parent="top_left"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="score_label" type="Label" parent="top_left/score"]
layout_mode = 2
text = "Score : "

[node name="score_value" type="Label" parent="top_left/score"]
layout_mode = 2
text = "0"

[node name="life" type="TextureProgressBar" parent="top_left"]
clip_children = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 10.0
value = 10.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("2_ssaku")
texture_progress = ExtResource("3_t8bnp")
